--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "augur-abi": "^0.2.7",
     "ethrpc": "^0.3.9",
     "ipfs-api": "^2.7.0",
-    "multi-hash": "^0.1.1",
-    "request": "^2.65.0"
+    "multi-hash": "^0.1.1"
   },
   "engines": {
     "node": "^4.0"
