--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "augur-abi": "^0.2.7",
     "ethrpc": "^0.3.9",
     "ipfs-api": "^2.7.0",
+    "mkdirp": "^0.5.1",
     "multi-hash": "^0.1.1"
   },
   "engines": {
